--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,6 +29,8 @@ workflows:
             branches:
               only:
                 - master
+      # the following must run after all test passed
+      # to show latest supported version in repository readme.md file
       - cypress/run:
           name: Run_LOG_VERSION_remotely
           requires:
